syntax = "proto3";

package fmtrpc;

option go_package = "github.com/SSSOC-CAN/fmtd/fmtrpc";

// Fmt is the main RPC server of the daemon.
service Fmt {
    /* fmtcli: `stop`
    StopDaemon will send a shutdown request to the interrupt handler, triggering
    a graceful shutdown of the daemon.
    */
    rpc StopDaemon (StopRequest) returns (StopResponse);
    rpc AdminTest (AdminTestRequest) returns (AdminTestResponse);
    rpc TestCommand (TestRequest) returns (TestResponse);
}

message StopRequest {
}
message StopResponse {
}
message AdminTestRequest {
}
message AdminTestResponse {
    string msg = 1;
}
message TestRequest {
}
message TestResponse {
    string msg = 1;
}